tests/snapshots/snapshots__interpreter@while_compound.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/while_compound.pr
---
15
12
=> ()
