tests/snapshots/snapshots__interpreter@while_state.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/while_state.pr
---
0
10
20
30
4
=> ()
