tests/snapshots/snapshots__interpreter@wire_hostile.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/wire_hostile.pr
---
control accepts good frame: OK
control accepts ascending map: OK
wrong scheme rejected: OK
wrong kind rejected: OK
wrong digest rejected: OK
truncated body rejected: OK
hostile length rejected: OK
descending map rejected: OK
varint at cap accepted: OK
overlong varint rejected: OK
long continuation run rejected: OK
=> ()
