tests/snapshots/snapshots__interpreter@wire_laws.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/wire_laws.pr
---
roundtrip product: OK
roundtrip sum: OK
roundtrip recursive: OK
roundtrip pair: OK
roundtrip triple: OK
roundtrip list of pairs: OK
ladder adjacent: OK
ladder composed: OK
envelope digest+trailing: OK
stable wrappers roundtrip+hostile: OK
stable frame real digest: OK
hostile decode terminates: OK
=> ()
