tests/snapshots/snapshots__interpreter@with_handler.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/with_handler.pr
---
13
=> ()
