tests/snapshots/snapshots__interpreter@with_reader.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/with_reader.pr
---
42
82
=> ()
