tests/snapshots/snapshots__interpreter@with_resource.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/with_resource.pr
---
enter outer
enter inner
body
exit inner
exit outer
=> ()
